2011-10-10  Adam Klein  <adamk@chromium.org>

        [MutationObservers] Add stub implementation of WebKitMutationObserver
        https://bugs.webkit.org/show_bug.cgi?id=68949

        Reviewed by Ryosuke Niwa, Oliver Hunt, and Dimitri Glazkov.

        * features.gypi: Added 'enable_mutation_observers' variable.

2011-10-11  Mike Reed  <reed@google.com>

        re-add support for GDI text behind a compile flag
        https://bugs.webkit.org/show_bug.cgi?id=69530

        Reviewed by James Robinson.

        * features.gypi:

2011-10-11  Pavel Podivilov  <podivilov@chromium.org>

        Unreviewed, roll chromium revision to pick HTML speech input images update.

        * DEPS:

2011-10-11  Antoine Labour  <piman@chromium.org>

        Expose WebLayer::isNull
        https://bugs.webkit.org/show_bug.cgi?id=69813

        Reviewed by Darin Fisher.

        * public/WebLayer.h:
        (WebKit::WebLayer::isNull):

2011-10-10  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r97087.
        http://trac.webkit.org/changeset/97087
        https://bugs.webkit.org/show_bug.cgi?id=69805

        failing assert on debug builds (Requested by simonjam on
        #webkit).

        * src/WebFrameImpl.cpp:
        (WebKit::WebFrameImpl::loadJavaScriptURL):

2011-10-10  Nico Weber  <thakis@chromium.org>

        [chromium] Pull tools/clang from upstream.
        https://bugs.webkit.org/show_bug.cgi?id=69797

        Reviewed by Adam Barth.

        * DEPS:

2011-10-10  Sergey Glazunov  <serg.glazunov@gmail.com>

        ScriptController::executeIfJavaScriptURL gets confused by synchronous frame loads
        https://bugs.webkit.org/show_bug.cgi?id=69777

        Reviewed by Adam Barth.

        * src/WebFrameImpl.cpp:
        (WebKit::WebFrameImpl::loadJavaScriptURL):

2011-10-10  Dominic Mazzoni  <dmazzoni@google.com>

        [Chromium] Get rid of WebAccessibilityCache.
        https://bugs.webkit.org/show_bug.cgi?id=68224
