@@ -137,6 +137,7 @@ public:
     WEBKIT_EXPORT void setFocused(bool) const;
     WEBKIT_EXPORT WebString stringValue() const;
     WEBKIT_EXPORT WebString title() const;
+    WEBKIT_EXPORT WebAccessibilityObject titleUIElement() const;
     WEBKIT_EXPORT WebURL url() const;
 
     WEBKIT_EXPORT WebString valueDescription() const;
